versioned_docs/version-6.0/client-api/commands/documents/put.mdx
---
title: "Put Document Command"
hide_table_of_contents: true
sidebar_label: Put Document
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "python", "php", "nodejs"];


# Put Document Command
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use the low-level `PutDocumentCommand` to insert a new document to the database or update an existing document.

* When using `PutDocumentCommand`, you must explicitly **specify the collection** to which the document will belong, 
  otherwise, the document will be placed in the `@empty` collection. See how this is done in the example below.

* To insert a document to the database using a higher-level method, see [storing entities](../../../client-api/session/storing-entities.mdx).  
  To update an existing document using a higher-level method, see [update entities](../../../client-api/session/updating-entities.mdx).

* In this page:

   * [Examples](../../../client-api/commands/documents/put.mdx#examples)
   * [Syntax](../../../client-api/commands/documents/put.mdx#syntax)

</Admonition>
## Examples

<Admonition type="note" title="Note">

**Put document command - using the Store's request executor**:
<Tabs groupId='languageSyntax'>
<TabItem value="Put_document" label="Put_document">
<CodeBlock language="csharp">
{`using (var store = new DocumentStore())
using (store.GetRequestExecutor().ContextPool.AllocateOperationContext(out var context))
{
    // Define the document to 'put' as a blittable object
    var blittableDocument = context.ReadObject(new DynamicJsonValue()
    {
        ["@metadata"] = new DynamicJsonValue()
        {
            ["@collection"] = "Categories"
        },
        ["Name"] = "My category",
        ["Description"] = "My category description"
    }, "categories/999");
    
    // Define the PutDocumentCommand
    var command = new PutDocumentCommand(store.Conventions,
        "categories/999", null, blittableDocument);
  
    // Call 'Execute' on the Store Request Executor to send the command to the server
    store.GetRequestExecutor().Execute(command, context);

    // Access the command result
    var putResult = command.Result;
    var theDocumentID = putResult.Id;
    var theDocumentCV = putResult.ChangeVector;
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Put_document_async" label="Put_document_async">
<CodeBlock language="csharp">
{`using (var store = new DocumentStore())
using (store.GetRequestExecutor().ContextPool.AllocateOperationContext(out var context))
{
    // Define the document to 'put' as a blittable object
    var blittableDocument = context.ReadObject(new DynamicJsonValue()
    {
        ["@metadata"] = new DynamicJsonValue()
        {
            ["@collection"] = "Categories"
        },
        ["Name"] = "My category",
        ["Description"] = "My category description"
    }, "categories/999");
    
    // Define the PutDocumentCommand
    var command = new PutDocumentCommand(store.Conventions,
        "categories/999", null, blittableDocument);
  
    // Call 'ExecuteAsync' on the Store Request Executor to send the command to the server
    await store.GetRequestExecutor().ExecuteAsync(command, context);

    // Access the command result
    var putResult = command.Result;
    var theDocumentID = putResult.Id;
    var theDocumentCV = putResult.ChangeVector;
}
`}
</CodeBlock>
</TabItem>
</Tabs>

</Admonition>
<Admonition type="note" title="Note">

**Put document command - using the Session's request executor**:
<Tabs groupId='languageSyntax'>
<TabItem value="Put_document" label="Put_document">
<CodeBlock language="csharp">
{`// Create a new document entity
var doc = new Category
{
    Name = "My category",
    Description = "My category description"
};

// Specify the collection to which the document will belong
var docInfo = new DocumentInfo
{
    Collection = "Categories"
};

// Convert your entity to a BlittableJsonReaderObject
var blittableDocument = session.Advanced.JsonConverter.ToBlittable(doc, docInfo);

// Define the PutDocumentCommand
var command = new PutDocumentCommand(store.Conventions,
    "categories/999", null, blittableDocument);

// Call 'Execute' on the Session Request Executor to send the command to the server
session.Advanced.RequestExecutor.Execute(command, session.Advanced.Context);

// Access the command result
var putResult = command.Result;
var theDocumentID = putResult.Id;
var theDocumentCV = putResult.ChangeVector;
`}
</CodeBlock>
</TabItem>
<TabItem value="Put_document_async" label="Put_document_async">
<CodeBlock language="csharp">
{`// Create a new document entity
var doc = new Category
{
    Name = "My category",
    Description = "My category description"
};

// Specify the collection to which the document will belong
var docInfo = new DocumentInfo
{
    Collection = "Categories"
};

// Convert your entity to a BlittableJsonReaderObject
var blittableDocument = asyncSession.Advanced.JsonConverter.ToBlittable(doc, docInfo);

// Define the PutDocumentCommand
var command = new PutDocumentCommand(store.Conventions,
    "categories/999", null, blittableDocument);

// Call 'Execute' on the Session Request Executor to send the command to the server
await asyncSession.Advanced.RequestExecutor.ExecuteAsync(
    command, asyncSession.Advanced.Context);

// Access the command result
var putResult = command.Result;
var theDocumentID = putResult.Id;
var theDocumentCV = putResult.ChangeVector;
`}
</CodeBlock>
</TabItem>
</Tabs>

</Admonition>


## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="csharp">
{`public PutDocumentCommand(DocumentConventions conventions,
        string id, string changeVector, BlittableJsonReaderObject document)
`}
</CodeBlock>
</TabItem>

| Parameter        | Type                        | Description                                                                                                                                                                                                                                          |
|------------------|-----------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| **id**           | `string`                    | Unique ID under which document will be stored.                                                                                                                                                                                                       |
| **changeVector** | `string`                    | The change-vector of the document you wish to update,<br/>used for [optimistic concurrency control](../../../server/clustering/replication/change-vector.mdx#concurrency-control-&-change-vectors).<br/>Pass `null` to skip the check and force the 'put'. |
| **document**     | `BlittableJsonReaderObject` | The document to store. Use:<br/>`session.Advanced.JsonConverter.ToBlittable(doc, docInfo);` to convert your entity to a `BlittableJsonReaderObject`.                                                                                                  |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="csharp">
{`// The \`PutDocumentCommand\` result:
// ================================

public class PutResult
\{
    /// The ID under which document was stored 
    public string Id \{ get; set; \}

    // The changeVector that was assigned to the stored document
    public string ChangeVector \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="java">


**Put** is used to insert or update a document in a database.

## Syntax

<TabItem value="put_interface" label="put_interface">
<CodeBlock language="java">
{`public PutDocumentCommand(String id, String changeVector, ObjectNode document)
`}
</CodeBlock>
</TabItem>

| Parameter        | Type         | Description                                                                                                                            |
|------------------|--------------|----------------------------------------------------------------------------------------------------------------------------------------|
| **id**           | `String`     | Unique ID under which document will be stored                                                                                          |
| **changeVector** | `String`     | Entity changeVector, used for concurrency checks (`null` to skip check)                                                                |
| **document**     | `ObjectNode` | The document to store. You may use `session.advanced().getEntityToJson().convertEntityToJson` to convert your entity to a `ObjectNode` |

## Example

<TabItem value="put_sample" label="put_sample">
<CodeBlock language="java">
{`Category doc = new Category();
doc.setName("My category");
doc.setDescription("My category description");

DocumentInfo docInfo = new DocumentInfo();
docInfo.setCollection("Categories");

ObjectNode jsonDoc = session.advanced().getEntityToJson().convertEntityToJson(doc, docInfo);
PutDocumentCommand command = new PutDocumentCommand("categories/999", null, jsonDoc);
session.advanced().getRequestExecutor().execute(command);
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="python">

<Admonition type="note" title="Note">

* Use `PutDocumentCommand` to insert a document to the database or update an existing document.

* In this page:

   * [Example](../../../client-api/commands/documents/put.mdx#example)
   * [Syntax](../../../client-api/commands/documents/put.mdx#syntax)

</Admonition>
## Example

<TabItem value="put_sample" label="put_sample">
<CodeBlock language="python">
{`# Create a new document
doc = Category(name="My category", description="My category description")

# Create metadata on the document
doc_info = DocumentInfo(collection="Categories")

# Convert your entity to a dict
dict_doc = session.entity_to_json.convert_entity_to_json_static(doc, session.conventions, doc_info)

# The put command (parameters are document ID, change vector check is None, the document to store)
command = PutDocumentCommand("employees/1-A", None, dict_doc)
# Request executor sends the command to the server
session.advanced.request_executor.execute_command(command)
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="put_interface" label="put_interface">
<CodeBlock language="python">
{`class PutDocumentCommand(RavenCommand[PutResult]):
    def __init__(self, key: str, change_vector: Optional[str], document: dict): ...
`}
</CodeBlock>
</TabItem>

| Parameter         | Type             | Description                                                             |
|-------------------|------------------|-------------------------------------------------------------------------|
| **key**           | `str`            | Unique ID under which document will be stored                           |
| **change_vector** | `str` (optional) | Entity changeVector, used for concurrency checks (`None` to skip check) |
| **document**      | `dict`           | The document to store                                                   |




</LanguageContent>
<LanguageContent language="php">

<Admonition type="note" title="Note">

* Use `PutDocumentCommand` to insert a document to the database or update an existing document.

* In this page:

   * [Example](../../../client-api/commands/documents/put.mdx#example)
   * [Syntax](../../../client-api/commands/documents/put.mdx#syntax)

</Admonition>
## Example

<TabItem value="put_sample" label="put_sample">
<CodeBlock language="php">
{`// Create a new document
$doc = new Category();
$doc->setName("My category");
$doc->setDescription("My category description");

// Create metadata on the document
$docInfo = new DocumentInfo();
$docInfo->setCollection("Categories");

// Convert your entity to a BlittableJsonReaderObject
$jsonDoc = $session->advanced()->getEntityToJson()->convertEntityToJson($doc, $docInfo);

// The Put command (parameters are document ID, changeVector check is null, the document to store)
$command = new PutDocumentCommand("categories/999", null, $jsonDoc);
// RequestExecutor sends the command to the server
$session->advanced()->getRequestExecutor()->execute($command);
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="put_interface" label="put_interface">
<CodeBlock language="php">
{`PutDocumentCommand(string $idOrCopy, ?string $changeVector, array $document);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| ------------- | ------------- | ----- |
| **idOrCopy** | `string` | Unique ID under which document will be stored |
| **changeVector** | `string` (optional) | Entity changeVector, used for concurrency checks (`None` to skip check) |
| **document** | `array` | The document to store |




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Use the low-level `PutDocumentCommand` to insert a new document to the database or update an existing document.

* When using `PutDocumentCommand`, you must explicitly **specify the collection** to which the document will belong,
  otherwise, the document will be placed in the `@empty` collection. See how this is done in the example below.

* To insert a document to the database using a higher-level method, see [storing entities](../../../client-api/session/storing-entities.mdx).  
  To update an existing document using a higher-level method, see [update entities](../../../client-api/session/updating-entities.mdx).

* In this page:

   * [Examples](../../../client-api/commands/documents/put.mdx#examples)
   * [Syntax](../../../client-api/commands/documents/put.mdx#syntax)

</Admonition>
## Examples

<Admonition type="note" title="Note">

**Put document command - using the Store's request executor**:
<TabItem value="put_document_1" label="put_document_1">
<CodeBlock language="js">
{`// Define the json document to 'put'
const jsonDocument = \{
    name: "My category",
    description: "My category description",
    "@metadata": \{
        "@collection": "categories"
    \}
\}

// Define the 'PutDocumentCommand'
// Pass the document ID, whether to make concurrency checks, 
// and the json document to store
const command = new PutDocumentCommand("categories/999", null, jsonDocument);

// Call 'execute' on the Store Request Executor to send the command to the server
await documentStore.getRequestExecutor().execute(command);

// Access the command result
const result = command.result;
const theDocumentID = result.id;
const theDocumentCV = result.changeVector;

assert.strictEqual(theDocumentID, "categories/999");
`}
</CodeBlock>
</TabItem>

</Admonition>
<Admonition type="note" title="Note">

**Put document command - using the Session's request executor**:
<TabItem value="put_document_2" label="put_document_2">
<CodeBlock language="js">
{`const session = documentStore.openSession();

// Create a new entity
const category = new Category();
category.name = "My category";
category.description = "My category description";

// To be able to specify under which collection the document should be stored 
// you need to convert the entity to a json document first.

// Passing the entity as is instead of the json document
// will result in storing the document under the "@empty" collection.

const documentInfo = new DocumentInfo();
documentInfo.collection = "categories"; // The target collection
const jsonDocument = EntityToJson.convertEntityToJson(
    category, documentStore.conventions, documentInfo);

// Define the 'PutDocumentCommand'
// Pass the document ID, whether to make concurrency checks,
// and the json document to store
const command = new PutDocumentCommand("categories/999", null, jsonDocument);

// Call 'execute' on the Session Request Executor to send the command to the server
await session.advanced.requestExecutor.execute(command);

// Access the command result
const result = command.result;
const theDocumentID = result.id;
const theDocumentCV = result.changeVector;

assert.strictEqual(theDocumentID, "categories/999");
`}
</CodeBlock>
</TabItem>

</Admonition>


## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="js">
{`PutDocumentCommand(id, changeVector, document);
`}
</CodeBlock>
</TabItem>

| Parameter        | Type     | Description                                                                                                                                                                                                                                          |
|------------------|----------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| **id**           | `string` | Unique ID under which document will be stored.                                                                                                                                                                                                       |
| **changeVector** | `string` | The change-vector of the document you wish to update,<br/>used for [optimistic concurrency control](../../../server/clustering/replication/change-vector.mdx#concurrency-control-&-change-vectors).<br/>Pass `null` to skip the check and force the 'put'. |
| **document**     | `object` | The document to store.                                                                                                                                                                                                                               |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="js">
{`// Executing \`PutDocumentCommand\` returns the following object:
\{
    // The document id under which the entity was stored
    id; // string
    
    // The change vector assigned to the stored document
    changeVector; // string
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>

<!---
### Commands
- [Get document](../../../client-api/commands/documents/get)
- [Delete document](../../../client-api/commands/documents/delete)
- [Send multiple commands using a batch](../../../client-api/commands/batches/how-to-send-multiple-commands-using-a-batch)


-->